@@ -4,8 +4,8 @@ import com.github.alexthe666.iceandfire.item.IafItemRegistry;
 import com.google.common.collect.ImmutableMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
-import net.minecraft.core.Registry;
 import net.minecraft.nbt.CompoundTag;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.effect.MobEffect;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.npc.VillagerTrades;
@@ -20,12 +20,12 @@ import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.trading.MerchantOffer;
 import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.block.Block;
+import net.minecraftforge.registries.ForgeRegistries;
 import org.jetbrains.annotations.NotNull;
 
 import javax.annotation.Nullable;
 import java.util.List;
-import java.util.Random;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 public class MyrmexTrades {
     public static final Int2ObjectMap<VillagerTrades.ItemListing[]> DESERT_WORKER;
@@ -143,7 +143,7 @@ public class MyrmexTrades {
                 new ItemsForDesertResinTrade(Items.MAGMA_CREAM, 5, 1, 3, 1),
                 new ItemsForDesertResinTrade(Items.GOLD_INGOT, 3, 1, 5, 1),
                 new ItemsForDesertResinTrade(IafItemRegistry.SILVER_INGOT.get(), 3, 1, 5, 1),
-                new ItemsForDesertResinTrade(IafItemRegistry.COPPER_INGOT.get(), 2, 2, 3, 1),
+                new ItemsForDesertResinTrade(Items.COPPER_INGOT, 2, 2, 3, 1),
                 new ItemsForDesertResinTrade(Items.ENDER_PEARL, 8, 1, 5, 1),
                 new ItemsForDesertResinTrade(Items.RABBIT_FOOT, 3, 1, 5, 1),
             }));
@@ -160,7 +160,7 @@ public class MyrmexTrades {
                 new ItemsForJungleResinTrade(Items.MAGMA_CREAM, 5, 1, 3, 1),
                 new ItemsForJungleResinTrade(Items.GOLD_INGOT, 3, 1, 5, 1),
                 new ItemsForJungleResinTrade(IafItemRegistry.SILVER_INGOT.get(), 3, 1, 5, 1),
-                new ItemsForJungleResinTrade(IafItemRegistry.COPPER_INGOT.get(), 2, 2, 3, 1),
+                new ItemsForJungleResinTrade(Items.COPPER_INGOT, 2, 2, 3, 1),
                 new ItemsForJungleResinTrade(Items.ENDER_PEARL, 8, 1, 5, 1),
                 new ItemsForJungleResinTrade(Items.RABBIT_FOOT, 3, 1, 5, 1),
             }));
@@ -232,7 +232,7 @@ public class MyrmexTrades {
 
         @Override
         @Nullable
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             return new MerchantOffer(new ItemStack(IafItemRegistry.MYRMEX_DESERT_RESIN.get(), this.emeraldCount), new ItemStack(this.buyingItem.getItem(), this.buyingItemCount), new ItemStack(this.sellingItem.getItem(), this.sellingItemCount), this.maxUses, this.xpValue, this.priceMultiplier);
         }
     }
@@ -260,11 +260,9 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, RandomSource rand) {
             ItemStack lvt_3_1_ = new ItemStack(IafItemRegistry.MYRMEX_DESERT_RESIN.get(), this.emeraldCount);
-            List<Potion> lvt_4_1_ = Registry.POTION.stream().filter((potion) -> {
-                return !potion.getEffects().isEmpty() && PotionBrewing.isBrewablePotion(potion);
-            }).collect(Collectors.toList());
+            List<Potion> lvt_4_1_ = ForgeRegistries.POTIONS.getEntries().stream().filter((potionEntry) -> !potionEntry.getValue().getEffects().isEmpty() && PotionBrewing.isBrewablePotion(potionEntry.getValue())).map(Map.Entry::getValue).toList();
             Potion lvt_5_1_ = lvt_4_1_.get(rand.nextInt(lvt_4_1_.size()));
             ItemStack lvt_6_1_ = PotionUtils.setPotion(new ItemStack(this.potionStack.getItem(), this.potionCount), lvt_5_1_);
             return new MerchantOffer(lvt_3_1_, new ItemStack(this.buyingItem, this.buyingItemCount), lvt_6_1_, this.maxUses, this.xpValue, this.priceMultiplier);
@@ -291,7 +289,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, RandomSource rand) {
             int lvt_3_1_ = 5 + rand.nextInt(15);
             ItemStack lvt_4_1_ = EnchantmentHelper.enchantItem(rand, new ItemStack(this.sellingStack.getItem()), lvt_3_1_, false);
             int lvt_5_1_ = Math.min(this.emeraldCount + lvt_3_1_, 64);
@@ -315,7 +313,7 @@ public class MyrmexTrades {
 
         @Override
         @Nullable
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             ItemStack lvt_3_1_ = new ItemStack(Items.SUSPICIOUS_STEW, 1);
             SuspiciousStewItem.saveMobEffect(lvt_3_1_, this.effect, this.duration);
             return new MerchantOffer(new ItemStack(IafItemRegistry.MYRMEX_DESERT_RESIN.get(), 1), lvt_3_1_, 12, this.xpValue, this.priceMultiplier);
@@ -356,7 +354,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             ItemStack cloneStack = new ItemStack(this.stack.getItem(), this.itemCount);
             cloneStack.setTag(this.stack.getTag());
             return new MerchantOffer(new ItemStack(IafItemRegistry.MYRMEX_DESERT_RESIN.get(), this.emeraldCount), cloneStack, this.maxUses, this.exp, this.multiplier);
@@ -379,7 +377,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             ItemStack lvt_3_1_ = new ItemStack(this.tradeItem, this.count);
             return new MerchantOffer(lvt_3_1_, new ItemStack(IafItemRegistry.MYRMEX_DESERT_RESIN.get()), this.maxUses, this.xpValue, this.priceMultiplier);
         }
@@ -413,7 +411,7 @@ public class MyrmexTrades {
 
         @Override
         @Nullable
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             return new MerchantOffer(new ItemStack(IafItemRegistry.MYRMEX_JUNGLE_RESIN.get(), this.emeraldCount), new ItemStack(this.buyingItem.getItem(), this.buyingItemCount), new ItemStack(this.sellingItem.getItem(), this.sellingItemCount), this.maxUses, this.xpValue, this.priceMultiplier);
         }
     }
@@ -440,11 +438,9 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, RandomSource rand) {
             ItemStack lvt_3_1_ = new ItemStack(IafItemRegistry.MYRMEX_JUNGLE_RESIN.get(), this.emeraldCount);
-            List<Potion> lvt_4_1_ = Registry.POTION.stream().filter((potion) -> {
-                return !potion.getEffects().isEmpty() && PotionBrewing.isBrewablePotion(potion);
-            }).collect(Collectors.toList());
+            List<Potion> lvt_4_1_ = ForgeRegistries.POTIONS.getEntries().stream().filter((potionEntry) -> !potionEntry.getValue().getEffects().isEmpty() && PotionBrewing.isBrewablePotion(potionEntry.getValue())).map(Map.Entry::getValue).toList();
             Potion lvt_5_1_ = lvt_4_1_.get(rand.nextInt(lvt_4_1_.size()));
             ItemStack lvt_6_1_ = PotionUtils.setPotion(new ItemStack(this.potionStack.getItem(), this.potionCount), lvt_5_1_);
             return new MerchantOffer(lvt_3_1_, new ItemStack(this.buyingItem, this.buyingItemCount), lvt_6_1_, this.maxUses, this.xpValue, this.priceMultiplier);
@@ -471,7 +467,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, RandomSource rand) {
             int lvt_3_1_ = 5 + rand.nextInt(15);
             ItemStack lvt_4_1_ = EnchantmentHelper.enchantItem(rand, new ItemStack(this.sellingStack.getItem()), lvt_3_1_, false);
             int lvt_5_1_ = Math.min(this.emeraldCount + lvt_3_1_, 64);
@@ -514,7 +510,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             ItemStack cloneStack = new ItemStack(this.stack.getItem(), this.itemCount);
             cloneStack.setTag(this.stack.getTag());
             return new MerchantOffer(new ItemStack(IafItemRegistry.MYRMEX_JUNGLE_RESIN.get(), this.emeraldCount), cloneStack, this.maxUses, this.exp, this.multiplier);
@@ -537,7 +533,7 @@ public class MyrmexTrades {
         }
 
         @Override
-        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull Random rand) {
+        public MerchantOffer getOffer(@NotNull Entity trader, @NotNull RandomSource rand) {
             ItemStack lvt_3_1_ = new ItemStack(this.tradeItem, this.count);
             return new MerchantOffer(lvt_3_1_, new ItemStack(IafItemRegistry.MYRMEX_JUNGLE_RESIN.get()), this.maxUses, this.xpValue, this.priceMultiplier);
         }
